# registry

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: mirror-to-inrae.yml
regorator/: __init__.py  version.py
regorator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
regorator/core/: main.py
regorator/regorator.egg-info/: PKG-INFO  SOURCES.txt
