[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regorator"
dynamic = ["version"]
description = "A Python Registry and Decorator System"
authors = [
    { name = "Pedro Henrique Coimbra", email = "pedro-henrique.herig-coimbra@inrae.fr" }
]
keywords = ["register", "registry", "decorator"]
license = { text = "EUPL-1.2" }
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Other/Nonlisted Topic",
]
# requires-python = ">=3.8"
# dependencies = [
# ]

[project.urls]
Homepage = "https://github.com/pedrohenriquecoimbra/regorator"

[tool.setuptools]
packages = ["regorator", "regorator.core"]
exclude-package-data = { "regorator" = ["deprecated*"] }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "regorator.version.__version__" }
description = { file = "README.md" }
# long_description = { file = "README.md", content-type = "text/markdown" }
